--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
     "async": "^0.9.0",
     "chokidar": "^0.9.0",
     "concat-stream": "^1.4.6",
-    "csswring": "^1.3.0",
     "debug": "^2.0.0",
     "extend": "^1.3.0",
+    "html-minifier": "^0.6.8",
     "lrio": "0.0.3",
-    "postcss": "^2.2.5",
     "relative-package": "^1.0.0",
     "resolve": "^1.0.0",
     "through2": "^1.1.1"
@@ -41,15 +40,7 @@
     "expect.js": "*",
     "jsdom": "^1.0.0",
     "jshint": "*",
-    "less": "^1.7.5",
     "mocha": "*",
-    "node-sass": "^0.9.5-rc1",
-    "postcss-calc": "^2.0.1",
-    "postcss-custom-properties": "^0.3.1",
-    "rework": "^1.0.1",
-    "rework-calc": "^1.1.0",
-    "rework-vars": "^3.1.1",
-    "stylus": "^0.49.1",
     "syntax-error": "^1.1.1"
   },
   "browser": "./src/htmly-browser.js",
