--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/limpidjs/htmly.git"
+    "url": "https://github.com/nodys/htmly.git"
   },
   "author": "Jean Ponchon <jean.ponchon@novadiscovery.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/limpidjs/htmly/issues"
+    "url": "https://github.com/nodys/htmly/issues"
   },
-  "homepage": "https://github.com/limpidjs/htmly",
+  "homepage": "https://github.com/nodys/htmly",
   "dependencies": {
     "async": "^0.9.0",
     "chokidar": "^0.9.0",
