--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/nodys/htmly",
   "dependencies": {
     "async": "^0.9.0",
-    "chokidar": "^0.9.0",
+    "chokidar": "^0.10.2",
     "concat-stream": "^1.4.6",
     "debug": "^2.0.0",
     "extend": "^1.3.0",
@@ -32,8 +32,8 @@
     "lrio": "0.0.3",
     "relative-package": "^1.0.0",
     "resolve": "^1.0.0",
-    "through2": "^1.1.1",
-    "syntax-error": "^1.1.1"
+    "syntax-error": "^1.1.1",
+    "through2": "^1.1.1"
   },
   "devDependencies": {
     "browserify": "^5.12.1",
