--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lrio": "^1.1.0",
     "relative-package": "^1.0.0",
     "resolve": "^1.0.0",
+    "slash": "^1.0.0",
     "syntax-error": "^1.1.1",
     "through2": "^1.1.1"
   },
