--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "monitor": "mocha --reporter spec --watch",
     "debugtest": "node-debug _mocha",
     "coverage": "rm -rf ./lib-cov && jscoverage ./lib ./lib-cov && COVERAGE=true mocha --reporter html-cov > ./coverage.html || true && rm -rf ./lib-cov",
-    "jshint": "./node_modules/.bin/jshint --exclude node_modules",
-    "doc": "./support/updatedoc.js",
-    "standard": "standard"
+    "standard": "./node_modules/.bin/standard",
+    "doc": "./support/updatedoc.js"
   },
   "repository": {
     "type": "git",
@@ -24,27 +23,26 @@
   },
   "homepage": "https://github.com/nodys/htmly",
   "dependencies": {
-    "async": "^0.9.0",
-    "chokidar": "^0.12.6",
+    "async": "^1.0.0",
+    "chokidar": "^1.0.1",
     "concat-stream": "^1.4.6",
     "debug": "^2.0.0",
-    "extend": "^1.3.0",
-    "html-minifier": "^0.6.8",
-    "lrio": "^1.1.0",
+    "extend": "^2.0.1",
+    "html-minifier": "^0.7.2",
+    "lrio": "^1.2.1",
     "relative-package": "^1.0.0",
     "resolve": "^1.0.0",
     "slash": "^1.0.0",
     "syntax-error": "^1.1.1",
-    "through2": "^1.1.1"
+    "through2": "^0.6.5"
   },
   "devDependencies": {
-    "browserify": "^5.12.1",
+    "browserify": "^10.2.3",
     "docflux": "^1.1.2",
     "expect.js": "*",
-    "jsdom": "^3.0.1",
-    "jshint": "*",
-    "mocha": "*",
-    "standard": "^3.9.0"
+    "jsdom": "^5.4.3",
+    "mocha": "^2.2.5",
+    "standard": "^3.11.1"
   },
   "browser": "./src/htmly-browser.js",
   "keywords": [
